--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap";
-@import "src/colors/variables.css";
+@import "src/colors/variables.scss";
 @import "react-loading-skeleton/dist/skeleton.css";
 
 * {
